--- a/styles/style.css
+++ b/styles/style.css
@@ -58,3 +58,48 @@ body{
     letter-spacing: 0%;
     margin-bottom: 35px;
 }
+.Bg-Container{
+    width: 1440px;
+    max-height: 652px;
+    background-image: url('assets/Hero-bg.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+ }
+ .Bg-Div{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    min-width: 998px;
+ }
+ .Bg-Header{
+    margin-top: 32px;
+ }
+ .Bg-Text-Pragraph{
+    text-align: center;
+    margin-top: 24px;
+    margin-left: 294px;
+    margin-right: 294px;
+ }
+ .Bg-btn{
+    border-radius: 8px;
+    background-color: rgb(13, 19, 33);
+    color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 21px 24px 21px 24px;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 32px;
+    margin-left: 616px;
+    margin-right: 616px;
+    text-decoration: none;
+    margin-bottom: 44px;
+ }
+  .Deco-Btn{
+   width: 208px;
+   height: 24px;
+ }
