--- a/styles/style.css
+++ b/styles/style.css
@@ -103,3 +103,9 @@ body{
    width: 208px;
    height: 24px;
  }
+ Main{
+    margin-left: 148px;
+    margin-right: 152px;
+    margin-top: 74px;
+    margin-bottom: 80px;
+ }
