--- a/styles/style.css
+++ b/styles/style.css
@@ -109,3 +109,74 @@ body{
     margin-top: 74px;
     margin-bottom: 80px;
  }
+ .Why-Web-Deve{
+    border-radius: 16px;
+    width: 1140px;
+    height: 1395px;
+    background-color: rgba(13, 19, 33, 0.02);
+ }
+
+.Why-Web-Container{
+   display: flex;
+   flex-direction: row;
+   justify-content: flex-start;
+   align-items: center;
+   padding: 80px 97px 80px 97px;
+   border-radius: 16px;
+   /* background-color: rgba(13, 19, 33, 0.02); */
+}
+.Web-Ancor{
+width: 180px;
+height: 48px;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 12px 20px 12px 20px;
+text-decoration: none;
+margin: 32px 0px;
+box-sizing: border-box;
+border: 1px solid rgb(13, 19, 33);
+opacity: 0.7;
+color: rgb(13, 19, 33);
+font-size: 20px;
+font-weight: 600;
+text-align: center;
+}
+.Why-Web-Content{
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   align-items: center;
+   padding: 0px;
+   gap: 99px;
+   border-radius: 16px;
+   
+}
+.why-web-title{
+   color: rgba(13, 19, 33, 0.7);
+   font-size: 24px;
+   font-weight: 700;
+   text-align: left;
+   margin-bottom: 16PX;
+}
+.why-web-pragraph{
+   color: rgb(13, 19, 33);
+   font-size: 16px;
+   font-weight: 400;
+   text-align: left;
+   margin-bottom: 32px;
+}
+ .Web-Deve-Title{
+    color: rgb(13, 19, 33);
+    font-weight: 800;
+    font-size: 32px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 80px;
+    margin-left: 97px;
+    margin-right: 97px;
+    padding-top: 80px;
+ }
