--- a/styles/style.css
+++ b/styles/style.css
@@ -180,3 +180,27 @@ text-align: center;
     margin-right: 97px;
     padding-top: 80px;
  }
+ .Web-Deve-Pragraph{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    color: rgb(13, 19, 33);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: center;
+    margin-left: 47px;
+    margin-right: 47px;
+    margin-top: 24px;
+ }
+
+ /* Inspiration section start */
+ .Inspiration{
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: flex-start;
+   padding:10px;
+   width: 1140px;
+ }
