--- a/styles/style.css
+++ b/styles/style.css
@@ -307,3 +307,14 @@ text-align: center;
     text-align: left;
     text-decoration-line: underline;
  }
+ .Target-Div-CSS{
+    border-radius: 16px;
+    background: rgba(0, 76, 232, 0.05);
+    padding: 40px;
+    justify-content: center;
+ }
+ .Target-Div-JS{
+    border-radius: 16px;
+    background: rgba(255, 223, 0, 0.05);
+    padding: 40px;
+ }
