--- a/styles/style.css
+++ b/styles/style.css
@@ -318,3 +318,55 @@ text-align: center;
     background: rgba(255, 223, 0, 0.05);
     padding: 40px;
  }
+ .Need-Support{
+    border-radius: 16px;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),url('assets/handshake.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 16px;
+    width: 1140px;
+    height: 313px;
+    margin-top: 49px ;
+    margin-bottom:80px ;
+  }
+ .Support-Title{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: rgb(255, 255, 255);
+    font-size: 32px;
+    font-weight: 700;
+    letter-spacing: 0%;
+    text-align: center;
+    padding-top: 64px;
+ }
+ .Support-Pragraph{
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    padding-top: 16px;
+ }
+ .text-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: 24px;
+    padding-left: 228px;
+ }
+ .text-box-Button{
+    color: rgb(13, 19, 33);
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    margin-left: 16px;
+    padding: 17px 20px 17px 20px;
+    border-radius: 8px;
+    background-color: rgb(255, 255, 255);
+ 
+ }
