--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@ body{
 .Bg-Container{
     width: 1440px;
     max-height: 652px;
-    background-image: url('assets/Hero-bg.png');
+    background-image: url('../assets/Hero-bg.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -320,7 +320,7 @@ text-align: center;
  }
  .Need-Support{
     border-radius: 16px;
-    background-image:linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),url('assets/handshake.jpg');
+    background-image:linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),url('../assets/handshake.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -392,4 +392,22 @@ text-align: center;
  }
  .Footer-Ancor-git{
     padding-right: 24px;
+ }
+ input[type=text]{
+    width: 548px ;
+    height: 57px;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    color: rgba(13, 19, 33, 0.4);
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0%;
+    text-align: left;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: last baseline;
+    padding: 19px 20px 19px 20px;
  }
